# glibc

./: ChangeLog  Makeconfig  NEWS  config.make.in  configure  configure.ac
argp/: argp.h  argpP.h
benchtests/scripts/: validate_benchout.py
bits/: floatn-compat.h  floatn.h  huge_val_flt128.h  libc-header-start.h  math-features.h
crypt/: Makefile
elf/: Makefile  dl-find_object.c  dl-tls.c
include/: err.h  gmp.h  math.h  stdio.h  stdlib.h  wchar.h
include/bits/: stdio2-dec.h
libio/: Makefile  stdio.h
libio/bits/: stdio2-dec.h
manual/: arith.texi
math/: Makefile  complex.h  e_scalb_template.c  math-narrow.h  math.h  test-float128.h  test-float64x.h  test-ibm128.h  test-ldouble.h  w_scalb_template.c  w_scalbf_compat.c  w_scalbl_compat.c
math/bits/: math-finite.h  mathcalls-helper-functions.h  mathcalls.h
misc/: err.h  error.h
misc/sys/: cdefs.h
nptl/: ChangeLog  pthread_rwlock_rdlock.c  pthread_rwlock_tryrdlock.c  tst-cond20.c  tst-cond24.c
nptl/sysdeps/powerpc/: tcb-offsets.sym  tls.h
nptl/sysdeps/pthread/: createthread.c  pthread.h
nptl/sysdeps/unix/sysv/linux/powerpc/: Makefile  createthread.c  lowlevellock.h  pthread_mutex_cond_lock.c
nptl/sysdeps/unix/sysv/linux/powerpc/bits/: pthreadtypes.h
nptl/sysdeps/unix/sysv/linux/s390/bits/: pthreadtypes.h
nptl/sysdeps/unix/sysv/linux/sh/bits/: pthreadtypes.h
nptl/sysdeps/unix/sysv/linux/sparc/bits/: pthreadtypes.h
nptl/sysdeps/unix/sysv/linux/x86/bits/: pthreadtypes.h
ports/sysdeps/unix/sysv/linux/aarch64/nptl/bits/: pthreadtypes.h
ports/sysdeps/unix/sysv/linux/alpha/nptl/bits/: pthreadtypes.h
ports/sysdeps/unix/sysv/linux/arm/nptl/bits/: pthreadtypes.h
ports/sysdeps/unix/sysv/linux/hppa/nptl/bits/: pthreadtypes.h
ports/sysdeps/unix/sysv/linux/ia64/nptl/bits/: pthreadtypes.h
ports/sysdeps/unix/sysv/linux/m68k/nptl/bits/: pthreadtypes.h
ports/sysdeps/unix/sysv/linux/microblaze/nptl/bits/: pthreadtypes.h
ports/sysdeps/unix/sysv/linux/mips/nptl/bits/: pthreadtypes.h
ports/sysdeps/unix/sysv/linux/tile/nptl/bits/: pthreadtypes.h
stdio-common/: Makefile  printf.h  printf_fp.c  printf_fphex.c  printf_size.c
stdlib/: Makefile  stdlib.h
stdlib/bits/: stdlib-ldbl.h
sysdeps/generic/: libc-start.h  math-type-macros-float128.h  math_private.h  math_private_calls.h
sysdeps/ia64/fpu/bits/: math-features.h
sysdeps/ieee754/dbl-64/: s_sin.c
sysdeps/ieee754/float128/: Versions  e_exp2f128.c  float1282mpn.c  float128_private.h  s_iscanonicalf128.c  strtof128_l.c
sysdeps/ieee754/float128/bits/: iscanonicalf128.h
sysdeps/ieee754/ldbl-128/: ldbl2mpn.c
sysdeps/ieee754/ldbl-128ibm/: Makefile  s_fmal.c
sysdeps/ieee754/ldbl-128ibm-compat/: Makefile  Versions  e_scalbf128.c  ieee128-argp_error.c  ieee128-argp_failure.c  ieee128-sprintf_chk.c  ieee128-vsprintf_chk.c  ieee128-vswscanf.c  s_nextafterf128.c  s_nexttowardf128.c  s_significandf128.c  strfromf128.c  strtof128.c  strtof128_l.c  test-argp-error-ieee128.c  test-argp-error-ldbl-compat.c  test-argp-error-ldbl-compat.sh  test-argp-failure-ibm128.c  test-argp-failure-ldbl-compat.c  test-argp-failure-ldbl-compat.sh  test-argp-ldbl-compat.c  test-err-ibm128.c  test-err-ldbl-compat.c  test-err-ldbl-compat.sh  test-error-ldbl-compat.c  test-error1-ieee128.c  test-error1-ldbl-compat.c  test-error2-ibm128.c  test-error2-ldbl-compat.c  test-errx-ibm128.c  test-errx-ldbl-compat.c  test-printf-chk-ldbl-compat.c  test-printf-ldbl-compat.c  test-scanf-ldbl-compat-template.c  test-verr-ibm128.c  test-verr-ldbl-compat.c  test-verrx-ieee128.c  test-verrx-ldbl-compat.c  test-warn-ibm128.c  test-warn-ldbl-compat.c  (+2 more)
sysdeps/ieee754/ldbl-128ibm-compat/bits/: stdio-ieee128.h
sysdeps/ieee754/ldbl-128ibm/bits/: iscanonical.h
sysdeps/ieee754/ldbl-opt/: Makefile  s_scalbn.c
sysdeps/powerpc/: sysdep.h
sysdeps/powerpc/fpu/: libm-test-ulps  math_private.h
sysdeps/powerpc/powerpc32/: Implies
sysdeps/powerpc/powerpc64/: Implies  start.S
sysdeps/powerpc/powerpc64/fpu/: configure  configure.ac
sysdeps/powerpc/powerpc64/fpu/multiarch/: Makefile  vec_d_cos2_vsx.c  vec_d_trig_data.h
sysdeps/powerpc/powerpc64/le/: Implies-before  Makefile  configure  configure.ac
sysdeps/powerpc/powerpc64/le/fpu/multiarch/: Makefile
sysdeps/powerpc/powerpc64/multiarch/: bzero.c  ifunc-impl-list.c  memcpy.c  memset.c  strlen.c
sysdeps/powerpc/powerpc64le/: Makefile
sysdeps/powerpc/powerpc64le/bits/: floatn-compat.h  floatn.h
sysdeps/unix/sysv/linux/powerpc/: libc-start.c  libc-start.h
sysdeps/unix/sysv/linux/powerpc/powerpc32/: sysdep.h
sysdeps/unix/sysv/linux/powerpc/powerpc64/: libc-le.abilist  libm-le.abilist  sysdep.h
wcsmbs/: wchar.h
